# data-corpora-kanseki-KR3

./: .gitmodules  README.md  build_gitmodules.py  git_clone_Kanseki_Repository.sh  merge_text_files.sh  pyproject.toml
META/: Kanseki_Repository.catalog
